--- a/js/templates/watchlistItem.html
+++ b/js/templates/watchlistItem.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>{{title}}</title>
-</head>
-<body>
+<!--Showing an item of a watchlist type -->
+<div>
 	<div>
-		{{title}}
+		{{#each movies}}
+		<span> Je passe ici</span>
+		{{/each}}
 	</div>
-	<div>
-		{{}}
-	</div>
-
-</body>
-</html>
+</div>
