waiting for the movies and tv series to parse in watchlists

--- a/js/templates/watchlistItem.html
+++ b/js/templates/watchlistItem.html
@@ -1,6 +1,8 @@
 <!--Showing an item of a watchlist type -->
 <div>
 	<div>
+		{{id}}
+		<span>{{email}}</span>
 		{{#each movies}}
 		<span> Je passe ici</span>
 		{{/each}}
