--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -114,7 +114,7 @@
     </div>
 
     <div class="movie-preview">
-        <span>Preview</span>
+        <span>Trailer</span>
         <video width=100% controls>
             <source src={{previewUrl}} type="video/m4v">
             Your browser does not support HTML5 video.
