Fix icon and typos in TvShow page

--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -5,7 +5,7 @@
 <div class="movie-page">
     <div class="desktop-title">{{trackName}}</div>
     <div class="movie-general-background">
-        <img src="url(../../img/background-movie2.png">
+        <img src="url(../../img/movie-tvShow-content/background-movie.png">
     </div>
 
     <div class="movie-bar">
