--- a/css/movie.css
+++ b/css/movie.css
@@ -1,13 +1,9 @@
 html{
-    font-family: "Helvetica Neue";
+    font-family: "Helvetica Neue"; /* Temporary*/
 }
 
 .movie-page {
     background-color: #0E0F11;
-}
-
-.desktop-title{
-    display: none;
 }
 
 .movie-general-background img{
@@ -82,31 +78,31 @@ html{
 }
 
 .movie-info-name-icon{
-    background-image: url('../img/movie-content/svg/movie-info-name-icon.svg');
+    background-image: url('../img/movie-tvShow-content/svg/name-icon.svg');
 }
 
 .movie-info-pgrating-icon{
-    background-image: url('../img/movie-content/svg/movie-info-pgrating-icon.svg');
+    background-image: url('../img/movie-tvShow-content/svg/pgrating-icon.svg');
 }
 
 .movie-info-director-icon{
-    background-image: url('../img/movie-content/svg/movie-info-director-icon.svg');
+    background-image: url('../img/movie-tvShow-content/svg/director-icon.svg');
 }
 
 .movie-info-productionhouse-icon{
-    background-image: url('../img/movie-content/svg/movie-info-productionhouse-icon.svg');
+    background-image: url('../img/movie-tvShow-content/svg/productionhouse-icon.svg');
 }
 
 .movie-info-writers-icon{
-    background-image: url('../img/movie-content/svg/movie-info-writers-icon.svg');
+    background-image: url('../img/movie-tvShow-content/svg/writers-icon.svg');
 }
 
 .movie-info-language-icon{
-    background-image: url('../img/movie-content/svg/movie-info-language-icon.svg');
+    background-image: url('../img/movie-tvShow-content/svg/language-icon.svg');
 }
 
 .movie-info-price-icon{
-    background-image: url('../img/movie-content/svg/movie-info-price-icon.svg');
+    background-image: url('../img/movie-tvShow-content/svg/price-icon.svg');
 }
 
 .movie-preview {
@@ -117,9 +113,10 @@ html{
     margin-left: 5%;
 }
 
-.movie-info-box-desktop, .movie-summary-desktop, .movie-short-technical-info-desktop{
+.movie-info-box-desktop, .movie-summary-desktop, .desktop-title, .movie-short-technical-info-desktop{
     display: none;
 }
+
 
 @media screen and (min-width: 768px) {
 
@@ -148,11 +145,11 @@ html{
     }
 
     .movie-info-box{
-        padding: 0.4em 0;
+        padding: 0 0;
     }
 
     .movie-info-name-icon{
-        margin-top:-.4em;
+        margin-top:-.7em;
     }
 
     .movie-info-price-icon{
@@ -170,13 +167,12 @@ html{
 
     .movie-info-subject, .movie-info-subject-content{
         display: inline-flex;
-        /* text-align: left; */
         font-size: 1.4em;
         width: 45em;
     }
 
     .desktop-title{
-        margin-top: 100px; /*Tobe changed */
+        margin-top: 100px; /*To be changed */
         font-size: 1.5em;
         width: 60%;
         text-align: center;
@@ -212,10 +208,6 @@ html{
     }
 
     .movie-info-box-desktop{
-        /* padding: 2em 2em 0 0; */
-    }
-
-    .movie-info-box-desktop{
         margin-top: 10%;
         margin-bottom: 10%;
         display: block;
@@ -228,7 +220,6 @@ html{
         display: block;
         text-align: right;
         width: 40%;
-        /* color: rgba(43, 105, 226, 0.99); */
     }
 
     .movie-info-box-desktop .movie-info-subject-content span{
@@ -252,9 +243,9 @@ html{
     .movie-summary{
         display: none;
     }
+
     .movie-preview{
         width:40%;
-        background-color:red;
     }
 
     .movie-bar-info{
@@ -267,7 +258,6 @@ html{
 
     .movie-info-preview video{
         width:80%;
-        /* background-color:red; */
     }
 
     .movie-info-title-desktop{
@@ -289,10 +279,10 @@ html{
         margin-top: 3em;
     }
 
-
     .movie-short-technical-info-desktop{
         display: inline-flex;
     }
+
     .movie-short-technical-info-desktop div{
         font-size: 0.7em;
         margin: 0 2.1em;
