Fix function to return releaseYear and convertDuration

--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -12,8 +12,8 @@
         <div class="movie-thumbnail-image">
             <img src="{{artworkUrl100}}"/>
             <div class="movie-short-technical-info-desktop">
-                <div class="movie-length">Fix me{{convertDuration}}</div>
-                <div class="movie-year">Fix me{{releaseYear}}</div>
+                <div class="movie-length">{{convertDuration}}</div>
+                <div class="movie-year">{{releaseYear}}</div>
                 <div class="movie-country">{{country}}</div>
             </div>
         </div>
@@ -75,8 +75,8 @@
 
 
     <div class="movie-short-technical-info">
-        <div class="movie-length">Fix me{{convertDuration}}</div>
-        <div class="movie-year">Fix me{{releaseYear}}</div>
+        <div class="movie-length">{{convertDuration}}</div>
+        <div class="movie-year">{{releaseYear}}</div>
         <div class="movie-country">{{country}}</div>
     </div>
 
