Poursuite de Actor

--- a/js/templates/actor.html
+++ b/js/templates/actor.html
@@ -12,7 +12,7 @@
     <div class="information">
         <div class="actor-itunes">
 
-            <img class="imgActor">
+            <img class="imgActor" src="{{imgActor}}">
 
             <a href="{{artistLinkUrl}}">
                 <div class="itunes">
