--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -116,7 +116,7 @@
     <div class="movie-preview">
         <span>Trailer</span>
         <video width=100% controls>
-            <source src={{previewUrl}} type="video/m4v">
+            <source src={{trailerURL}} type="video/m4v">
             Your browser does not support HTML5 video.
         </video>
     </div>
