--- a/js/templates/pageHeader.html
+++ b/js/templates/pageHeader.html
@@ -4,7 +4,7 @@
     </span>
     <span id="page-options">
         {{#each option}}
-        <span class="button-{{class}}">{{action}}</span>
+        <span class="button-{{optionClass}}">{{action}}</span>
         {{/each}}
     </span>
 </div>
