--- a/css/tvShowEpisode.css
+++ b/css/tvShowEpisode.css
@@ -2,6 +2,32 @@ html{
     font-family: "Helvetica Neue";
 }
 
+.tvShow-myButton {
+    background-color: #C17E00;
+    -moz-border-radius:28px;
+    -webkit-border-radius:28px;
+    border-radius:28px;
+    /* border:1px solid #124d77; */
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    margin-left: 0;
+    margin-top: 0.9em;
+    font-family:Arial;
+    font-size: 0.8em;
+    padding: 0.5em 1.1em;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #154682;
+}
+
+.tvShow-myButton:hover {
+    background-color:#0061a7;
+}
+
+.tvShow-myButton:active {
+    position:relative;
+    top:1px;
+}
 .tvShow-page {
     background-color: #0E0F11;
 }
@@ -24,6 +50,7 @@ html{
     display: flex;
     background-color: #132340;
     padding-right: 1em;
+    padding-bottom: 0.7em;
 }
 
 .tvShow-bar-title{
@@ -167,7 +194,7 @@ html{
 @media screen and (min-width: 980px) {
 
     .tvShow-bar-genre, .tvShow-bar-title, .tvShow-general-background, .tvShow-bar-title .tvShow-bar-genre,
-    .tvShow-info-box-desktop .icon, .tvShow-info-box, .tvShow-preview, .tvShow-short-technical-info {
+    .tvShow-info-box-desktop .icon, .tvShow-info-box, .tvShow-preview, .tvShow-myButton, .tvShow-short-technical-info {
         display: none;
     }
 
@@ -293,11 +320,31 @@ html{
     }
 
     .tvShow-short-technical-info-desktop{
-        display: inline-flex;
+        display: block;
     }
     .tvShow-short-technical-info-desktop div{
         font-size: 0.7em;
         margin: 0 2.1em;
+    }
+
+    .watchlist-tvShow-button-desktop {
+        background-color: #C17E00;
+        -moz-border-radius:28px;
+        -webkit-border-radius:28px;
+        border-radius:28px;
+        /* border:1px solid #124d77; */
+        display:block;
+        cursor:pointer;
+        color:#ffffff;
+        /* margin-top: 2em; */
+        margin-left: 6em;
+        margin-right: 7em;
+        margin-top: 1.1em;
+        font-family:Arial;
+        font-size: 0.8em;
+        padding: 0.6em 1.1em;
+        text-decoration:none;
+        text-shadow:0px 1px 0px #154682;
     }
 
 }
