--- a/js/templates/actor.html
+++ b/js/templates/actor.html
@@ -20,8 +20,13 @@
                     <p id="centre">Apple Store </p>
                 </div>
             </a>
-
         </div>
+
+        <div>
+            <h2> Description :</h2>
+            <div class="description">{{biography}} </div>
+        </div>
+
 
     </div>
 
