adding button to add watchlist

--- a/css/watchlistStyle.css
+++ b/css/watchlistStyle.css
@@ -3,14 +3,19 @@
    (Desktop and Tablet modes).
 */
 
+.button-add-watchlist{
+    border-style: double;
+    border-bottom-color: white;
+    position: absolute;
+}
 
+.button-add-watchlist:hover{
+    color: red;
+    opacity: 1;
+}
 
 #watchlistTitle{
-<<<<<<< HEAD
-    
-=======
 
->>>>>>> master
     margin-left:  auto;
     margin-right: auto;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -44,15 +49,8 @@
         display : inline;
     }
 
-<<<<<<< HEAD
-=======
+
 /* Media query for the tablet version (Apple iPad) */
 
-
-
-
 /* Media query for the phone version (Nexus 5) */
-
->>>>>>> master
-
 }
