--- a/js/templates/pageHeader.html
+++ b/js/templates/pageHeader.html
@@ -1,7 +1,7 @@
+<h1>Your Watchlists</h1>
 <div>
     <span id="page-header-title">
-    {{pageTitle}}
-    </span>
+        </span>
     <span id="page-options">
         {{#each option}}
         <span class="button-{{optionClass}}">{{action}}</span>
