--- a/css/movie.css
+++ b/css/movie.css
@@ -212,7 +212,7 @@ html{
         margin-bottom: 10%;
         display: block;
         width: 100%;
-        margin-left: %;
+        margin-left: 10%;
         font-size: 13px;
     }
 
