Affichage, mais l'image et la description reste à afficher

--- a/js/templates/actorThumbnail.html
+++ b/js/templates/actorThumbnail.html
@@ -1,7 +1,7 @@
-<a class="movies-box" href="#actors/{{artistId}}">
-    <div class="thumbnail">
+<a class="actor-box" href="#actor/{{artistId}}">
+    <div class="actorThumbnail">
 
-        <p> {{artistName}}</p>
+        <div> {{artistName}}</div>
 
     </div>
 </a>
